# OTA_ver_1.0

./: README.md
CGW/: CMakeLists.txt  Downloader.cpp  Downloader.h  Sender.cpp  Sender.h  main.cpp
STM32_AB_Update/Bootloader/: Bootloader.ioc  Bootloader.launch
STM32_AB_Update/Bootloader/Core/Src/: main.c
STM32_AB_Update/PART_A/: PART_A Debug.launch  PART_A.ioc
STM32_AB_Update/PART_A/Core/Inc/: stm32f1xx_it.h
STM32_AB_Update/PART_A/Core/Src/: can.c  main.c
STM32_AB_Update/PART_B/: PART_A.ioc  PART_B Debug.launch
STM32_AB_Update/PART_B/Core/Src/: can.c  gpio.c  main.c  stm32f1xx_it.c
WEB/: app.py
WEB/templates/: upload.html
